--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
     "csurf": "^1.8.3",
     "debug": "~2.2.0",
     "ejs-mate": "^2.2.0",
+    "ejs": "^2.3.3",
     "express": "^4.12.4",
     "forms": "^1.1.1",
-    "mongodb": "~2.0.33",
     "morgan": "~1.5.3",
-    "serve-favicon": "~2.2.1",
     "socket.io": "^1.3.6",
-    "xtend": "^4.0.0",
+    "xtend": "^4.0.0"
   }
 }
